--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@testing-library/jest-dom": "^5.14.1",
@@ -15,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-fontawesome": "^1.7.1",
     "react-lottie": "^1.2.3",
+    "react-otp-input": "^2.4.0",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.0.2",
