--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-fontawesome": "^1.7.1",
     "react-lottie": "^1.2.3",
     "react-otp-input": "^2.4.0",
+    "react-paginate": "^7.1.3",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.0.2",
