--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-fontawesome": "^1.7.1",
+    "react-insta-stories": "^2.2.3",
     "react-lottie": "^1.2.3",
     "react-otp-input": "^2.4.0",
     "react-paginate": "^7.1.3",
