--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-fontawesome": "^1.7.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-insta-stories": "^2.2.3",
     "react-lottie": "^1.2.3",
     "react-otp-input": "^2.4.0",
