--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
+    "react-chartjs-2": "^3.0.5",
     "react-dom": "^17.0.2",
     "react-fontawesome": "^1.7.1",
     "react-infinite-scroll-component": "^6.1.0",
