--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-fontawesome": "^1.7.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-insta-stories": "^2.2.3",
+    "react-loading-skeleton": "^3.0.1",
     "react-lottie": "^1.2.3",
     "react-otp-input": "^2.4.0",
     "react-paginate": "^7.1.3",
